<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="stats_title">Activity</string>
    <string name="home_title">Home</string>
    <string name="budget_title">Budget</string>

    <string name="category_topbar_title">Create a Category</string>
    <string name="transaction_topbar_title">Add a Transaction</string>

    <string name="text_input_helper_text_required">Required*</string>
    <string name="text_input_helper_text_optional">Optional</string>

    <string name="hint_transaction_name">Name</string>
    <string name="hint_transaction_amount">Amount</string>
    <string name="hint_transaction_date">Date</string>
    <string name="hint_transaction_description">Description</string>
    <string name="hint_transaction_category">Category</string>

    <string name="hint_category_name">Name</string>
    <string name="hint_category_proportion_type">Proportion Type</string>
    <string name="hint_category_proportion_value">Proportion Value</string>

    <string name="tooltip_add_transaction">Add Transaction</string>
    <string name="action_edit">Save</string>
    <string name="action_add">Add</string>
    <string name="action_create">Create</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="stats_spending_by_category">Spending By Category</string>

    <string name="home_percent_description">of your budget remains</string>
    <string name="home_budget_money_remaining">Dollars Left</string>
    <string name="home_daily_budget">Daily Budget</string>
    <string name="home_recent_transactions">Recent Transactions</string>
    <string name="home_view_all_transactions">View All</string>
    <string name="home_add_new_transaction">Add new Transaction +</string>

    <string name="budget_monthly_budget">Monthly Budget:</string>
    <string name="budget_edit_budget">Edit Budget</string>
    <string name="budget_add_new_category">Add a New Category +</string>

    <string name="transaction_name">Name</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_description">Description</string>

    <string name="category_name">Name</string>
    <string name="category_proportion">Proportion</string>
    <string name="category_proportion_value">Value</string>

    <string name="line_graph_actual_remaining">Actual Dollars Remaining</string>
    <string name="line_graph_expected_remaining">"Expected Amount Remaining"</string>
    <string name="category_type_percent">Percent</string>
    <string name="category_type_fixed_value">Fixed Value</string>
    <string name="category_type_none">None</string>

    <string name="budget_table_label_category">\nCategory</string>
    <string name="budget_table_label_percent">Percent of Budget</string>
    <string name="budget_table_label_amount">Amount of Budget</string>
    <string name="budget_table_label_total">Categories Total</string>

    <string name="spending_by_category_table_label_category">\nCategory</string>
    <string name="spending_by_category_table_label_percent">Percent of Spending</string>
    <string name="spending_by_category_table_label_spent">Dollars Spent</string>

    <string name="activity_label_spending_by_category">Spending by Category</string>
    <string name="activity_label_pie_chart">Pie Chart</string>
    <string name="activity_label_data_table">Data Table</string>
    <string name="activity_label_line_graph">Line Graph</string>
    <string name="activity_label_amount_remaining">Amount Remaining This Month</string>

    <string name="content_description_category_icon">Category</string>

    <string name="amount_remaining_table_label_day">Purchase Date</string>
    <string name="amount_remaining_table_label_amount_spent">Amount Spent</string>
    <string name="amount_remaining_table_label_amount_remaining">Amount Remaining</string>

</resources>