<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <TextView
            android:id="@+id/spending_by_category_pie_chart_title"
            android:text="@string/activity_label_spending_by_category"
            style="@style/customHeading"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/spending_by_category_pie_chart_tab_layout"
            android:layout_below="@id/spending_by_category_pie_chart_title"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TabLayout"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:text="@string/activity_label_pie_chart"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/activity_label_data_table"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:id="@+id/pie_view"
            android:layout_below="@+id/spending_by_category_pie_chart_tab_layout"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_below="@+id/pie_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/spending_line_graph_title"
            android:layout_below="@id/pie_view"
            android:layout_marginTop="10dp"
            android:text="@string/activity_label_amount_remaining"
            style="@style/customHeading"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/spending_line_graph_tab_layout"
            android:layout_below="@id/spending_line_graph_title"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TabLayout"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:text="@string/activity_label_line_graph"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/activity_label_data_table"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/line_view"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_below="@id/spending_line_graph_tab_layout"
            />

    </RelativeLayout>
</ScrollView>