<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="Title"
            app:menu="@menu/top_bar"
            app:navigationIcon="@drawable/ic_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:layout_below="@id/top_bar"
        android:id="@+id/transaction_edit_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_transaction_name"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/transaction_edit_amount"
        android:layout_below="@id/transaction_edit_name"
        android:hint="@string/hint_transaction_amount"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/transaction_edit_date"
        android:layout_below="@id/transaction_edit_amount"
        android:hint="@string/hint_transaction_date"
        android:inputType="date"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/transaction_edit_category"
        android:layout_below="@id/transaction_edit_date"
        android:hint="@string/hint_transaction_category"
        android:inputType="date"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/transaction_edit_description"
        android:layout_below="@id/transaction_edit_category"
        android:hint="@string/hint_transaction_description"
        android:inputType="textMultiLine"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transaction_edit_description"
        android:id="@+id/transaction_delete_button"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/primary"
        android:text="Delete"
        />

</RelativeLayout>
