<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/home_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="90%"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_percent"
        android:id="@+id/progress_bar"
        android:layout_margin="30dp"
    >
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#777777"
        />
        <View
            android:layout_width="300dp"
            android:layout_height="10dp"
            android:background="#00EA20"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_bar"
        android:id="@+id/stat_remaining"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_budget_money_remaining"
            android:textSize="30sp"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$180"
            android:textSize="40sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stat_remaining"
        android:id="@+id/stat_daily_budget"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_daily_budget"
            android:textSize="30sp"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$14"
            android:textSize="40sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/recent_transactions_button"
        android:layout_below="@+id/stat_daily_budget"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/home_recent_transactions"
        />

    <RelativeLayout
        android:id="@+id/transactions_preview"
        android:layout_width="match_parent"
        android:layout_below="@+id/recent_transactions_button"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/preview_item_1"
            android:layout_height="wrap_content"
            android:text="Item 1"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/preview_item_2"
            android:layout_below="@id/preview_item_1"
            android:layout_height="wrap_content"
            android:text="Item 2"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/preview_item_3"
            android:layout_below="@id/preview_item_2"
            android:layout_height="wrap_content"
            android:text="Item 3"/>

    </RelativeLayout>

    <Button
        android:id="@+id/view_all_button"
        android:layout_below="@+id/transactions_preview"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/home_view_all_transactions"
        />

    <Button
        android:id="@+id/add_transaction_button"
        android:layout_below="@+id/view_all_button"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="Add new Transaction +"
        />

</RelativeLayout>